test_suite/tests/ui/conflict/adjacent-tag.stderr
error: enum tags `conflict` for type and content conflict with each other
 --> tests/ui/conflict/adjacent-tag.rs:4:1
  |
4 | / #[serde(tag = "conflict", content = "conflict")]
5 | | enum E {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
