test_suite/tests/ui/conflict/adjacent-tag.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(tag = "conflict", content = "conflict")]
enum E {
    A,
    B,
}

fn main() {}
